Fix T78575: Assert when using UILayout.prop_tabs_enum

Code required the tabs to be placed in an aligned region. Code should
work fine even for unaligned regions though, so I don't see a reason to
forbid this.